adding clarifying text on the text page

--- a/polymer2/lazy-img/index.html
+++ b/polymer2/lazy-img/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <div>Scroll down to move images into the viewport.</div>
     <div style="margin-top: 500em;">
         <dom-repeat>
             <template>
