--- a/polymer2/lazy-img/index.html
+++ b/polymer2/lazy-img/index.html
@@ -5,6 +5,14 @@
     <script src="https://polygit.org/components/webcomponentsjs/webcomponents-loader.js"></script>
     <link rel="import" href="https://polygit.org/components/polymer/lib/elements/dom-repeat.html">
     <link rel="import" href="lazy-image.html">
+    <style>
+        lazy-img {
+            width: 120px;
+            height: 120px;
+            object-fit: cover;
+            object-position: 50% 50%;
+        }
+    </style>
 </head>
 
 <body>
@@ -12,7 +20,13 @@
     <div style="margin-top: 500em;">
         <dom-repeat>
             <template>
-                <lazy-img lazy_src="[[item]]"></lazy-img>
+                <lazy-img 
+                    width="200px"
+                    height="120px"
+                    object-fit="cover"
+                    object-position="50% 50%"
+                    lazy_src="[[item]]">
+                </lazy-img>
             </template>
         </dom-repeat>
     </div>
